# critique_or_clarify

./: .gitignore  AGENTS.md  README.md  pyproject.toml
_assets/: codex_expert_validation_review.csv  codex_expert_validation_review.md  emnlp2026_answer_challenge_candidate_validation_queue.csv  emnlp2026_answer_topup_candidate_validation_queue.csv  emnlp2026_answer_topup_slice_completion_candidate_validation_queue.csv  emnlp2026_expansion_candidate_validation_queue.csv  human_validation_work_queue.csv  human_validation_work_queue_summary.md
configs/: day0_pcbench_paired.json  day0_qacc.json  day0_smoke.json  day1_dev_deepseek_r1_qwen15b.json  day1_dev_qwen25_coder_7b.json  day1_quick_deepseek_r1_qwen15b.json  day1_quick_deepseek_r1_qwen15b_compact.json  day1_quick_qwen25_05b.json  day1_quick_qwen25_coder_7b.json  day1_qwen25_05b.json  day1_stale_seed.json  day1_stale_seed_grounded_deepseek_r1_qwen15b.json
docs/: action_ontology.md  adjudication_protocol.md  annotation_rubric.md  day0_plan.md  emnlp2026_560_600_ci_scope_audit.md  emnlp2026_boundary_case_table.md  emnlp2026_citation_coverage_audit.md  emnlp2026_claim_ledger.md  emnlp2026_data_quality_section_v0.md  emnlp2026_figure2_audit.md  emnlp2026_figure_plan.md  emnlp2026_final_local_clarity_pass.md  emnlp2026_final_pdf_human_review_worksheet.md  emnlp2026_final_push_todo.md  emnlp2026_first_two_page_oral_readiness_audit.md  emnlp2026_first_two_page_visual_balance_audit.md  emnlp2026_full_pdf_visual_readiness_audit.json  emnlp2026_full_pdf_visual_readiness_audit.md  emnlp2026_introduction_v0.md  (+24 more)
paper/: README.md  (+3 more)
(+326 files in other folders)
